# so-2

./: CMakeLists.txt  compile  example.c  notec.asm  polecenie.txt
